--- a/kinder-frontend/package.json
+++ b/kinder-frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-beta.23",
     "vue": "^3.0.0",
+    "vue-axios": "^3.2.4",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
