--- a/kinder-frontend/package.json
+++ b/kinder-frontend/package.json
@@ -18,6 +18,8 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@cypress/vue": "^3.0.3",
+    "@cypress/webpack-dev-server": "^1.4.0",
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-router": "~4.5.13",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
@@ -25,6 +27,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "babel-eslint": "^10.1.0",
+    "cypress": "^8.2.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "typescript": "~3.9.3",
