add jest config and install babel

--- a/kinder-frontend/package.json
+++ b/kinder-frontend/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-service": "~4.5.13",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "cypress": "^8.2.0",
     "eslint": "^6.7.2",
@@ -51,5 +52,24 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest",
+      "^.+\\.tsx?$": "ts-jest",
+      ".*\\.(js)$": "babel-jest"
+    },
+    "testURL": "http://localhost/",
+    "collectCoverage": true,
+    "collectCoverageFrom": ["**/*.{js,vue}", "!**/node_modules/**"]
+  },
+  "babel": {
+    "presets": ["@babel/preset-env"]
+  }
 }
