--- a/kinder-frontend/package.json
+++ b/kinder-frontend/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "test": "jest"
+    "test": "jest",
+    "cy:run": "cypress run"
   },
   "dependencies": {
     "axios": "^0.21.1",
