--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "@microsoft/signalr": "^6.0.2",
     "@types/node": "^17.0.17",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "roboto-fontface": "*",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuetify": "^3.0.0-alpha.0",
+    "vuex": "^4.0.0-0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "@vue/cli-plugin-babel": "~5.0.0-rc.3",
@@ -42,9 +47,13 @@
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.1.0",
     "prettier": "^2.4.1",
+    "sass": "^1.38.0",
+    "sass-loader": "^10.0.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.1.5",
-    "vue-jest": "^5.0.0-0"
+    "vue-cli-plugin-vuetify": "~2.4.5",
+    "vue-jest": "^5.0.0-0",
+    "vuetify-loader": "^2.0.0-alpha.0"
   },
   "eslintConfig": {
     "root": true,
