--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "5.9.55",
     "@microsoft/signalr": "^6.0.2",
     "@types/node": "^17.0.17",
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
