--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,10 +10,24 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  securityScanning:
+    name: GitGuardian scan
     runs-on: ubuntu-latest
-
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # fetch all history so multiple commits can be scanned
+      - name: GitGuardian scan
+        uses: GitGuardian/ggshield-action@master
+        env:
+          GITHUB_PUSH_BEFORE_SHA: ${{ github.event.before }}
+          GITHUB_PUSH_BASE_SHA: ${{ github.event.base }}
+          GITHUB_PULL_BASE_SHA:  ${{ github.event.pull_request.base.sha }}
+          GITHUB_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
+          GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
+  build:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [17.x]
@@ -29,3 +43,4 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test:unit
+    needs: securityScanning
